Use CSS variable for image backgrounds to fix dark mode transparency
Add --color-image-bg variable that adapts between light (#fff) and
dark (#2a2a2a) modes. Transparent PNGs/SVGs on project cards and
related project thumbnails no longer show bright white rectangles.

--- a/docs/_sass/minima/custom-styles.scss
+++ b/docs/_sass/minima/custom-styles.scss
@@ -48,7 +48,7 @@
     margin: 0 0 6px;
     border-radius: 0;
     box-shadow: none;
-    background-color: #fff;
+    background-color: var(--color-image-bg);
   }
 }
 
@@ -128,7 +128,7 @@ img {
     height: 240px;
     border-top-left-radius: $radius-md;
     border-top-right-radius: $radius-md;
-    background-color: #fff;
+    background-color: var(--color-image-bg);
   }
 }
 
@@ -444,7 +444,7 @@ img {
     height: 150px;
     display: block;
     object-fit: cover;
-    background-color: #fff;
+    background-color: var(--color-image-bg);
   }
 }
 
